feat: add base style

--- a/index.html
+++ b/index.html
@@ -1,11 +1,49 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt">
     <head>
-        <body>
-            Hello Dear world, this is my github pages
-            <div>
-                Thats a div
-            </div>
-        </body>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Reinaldo Ferrianci</title>
+        <link rel="stylesheet" href="style.css">
     </head>
+
+
+
+<body>
+<div id="header">
+    <div class="container">
+        <nav>
+            <img src="images/logo.png" class="logo" >
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Sobre</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Portifólio</a></li>
+                <li><a href="#">Contatos</a></li>
+            </ul>
+        </nav>
+        <div class="header-text">
+            <p>WebDeveloper</p>
+            <h1>Hi, i'm <span>Reinaldo</span><br>Ferrianci from Brazil</h1>
+        </div>
+    </div>
+
+</div>
+<div id="about">
+    <div class="container">
+        <div class="row">
+            <div class="about-col-1">
+                <div id="about-image">
+                    <img src="images/about me.jpg" width="40%">
+                </div>
+            </div>
+            <div class="about-col-2">
+                <h1>Sobre mim</h1>
+            </div>
+        </div>
+    </div>
+</div>
+</body>
+
 </html>
